style.css
/* ... */
.checked-box {
  border: 1px solid #edf2f4;
  padding: 30px;
  border-radius: 3px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  margin-bottom: 30px;
  padding-left: 70px;
  position: relative; }
  .checked-box:before {
    content: "\f00c";
    font-family: "FontAwesome";
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border: 1px solid #edf2f4;
    display: block;
    position: absolute;
    left: 20px;
    top: 30px;
    color: #69acc7;
    text-align: center;
    line-height: 2; }
  .checked-box h3 {
    font-weight: 300;
    color: #69acc7;
    margin-bottom: 10px; }

ol.circle {
  list-style: none;
  counter-reset: circled; }
  ol.circle li {
    padding-left: 90px;
    position: relative;
    min-height: 70px;
    margin-bottom: 30px; }
    ol.circle li:before {
      counter-increment: circled;
      content: counter(circled);
      width: 70px;
      height: 70px;
      border: 4px solid #69acc7;
      display: block;
      border-radius: 50%;
      text-align: center;
      line-height: 2;
      font-size: 30px;
      font-size: 2em;
      font-weight: 400;
      position: absolute;
      top: 0;
      left: 0;
      color: #69acc7; }
    ol.circle li h3 {
      font-size: 16px;
      font-size: 1.0666666667em;
      font-weight: 400;
      color: #69acc7;
      margin-bottom: 10px; }

.testimonial-list {
  list-style: none; }
  .testimonial-list li {
    padding-left: 40px;
    position: relative;
    margin-bottom: 30px; }
    .testimonial-list li:before {
      content: " ";
      width: 21px;
      height: 18px;
      background: url(images/quote.png) no-repeat;
      display: block;
      position: absolute;
      top: 0;
      left: 0; }
    .testimonial-list li blockquote {
      margin: 0; }
      .testimonial-list li blockquote p {
        font-size: 15px;
        font-size: 1em;
        font-style: italic; }
      .testimonial-list li blockquote cite {
        font-weight: 400;
        font-style: normal; }

.boxed-icon {
  border-radius: 5px;
  border: 1px solid #edf2f4;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  padding: 20px 150px 20px 150px;
  position: relative;
  margin-bottom: 30px; }
  @media screen and (max-width: 640px) {
    .boxed-icon {
      padding-left: 30px; } }
  .boxed-icon .icon {
    position: absolute;
    left: 30px;
    top: 30px; }
    @media screen and (max-width: 640px) {
      .boxed-icon .icon {
        position: relative;
        left: 0;
        top: 0;
        margin: 0 auto 20px;
        display: block;
        text-align: center; } }
  .boxed-icon h3 {
    font-weight: 300;
    font-size: 30px;
    font-size: 2em; }

.project-list {
  margin: 0 -15px; }
  .project-list .project {
    float: left;
    width: 33.3333%;
    padding: 0 15px;
    text-align: center;
    margin-bottom: 30px; }
    .project-list .project:nth-child(3n+1) {
      clear: both; }
    @media screen and (max-width: 1220px) {
      .project-list .project {
        width: 50%; }
        .project-list .project:nth-child(3n+1) {
          clear: none; }
        .project-list .project:nth-child(2n+1) {
          clear: both; } }
    @media screen and (max-width: 480px) {
      .project-list .project {
        width: 100%; }
        .project-list .project:nth-child(2n+1) {
          clear: none; } }
    .project-list .project .project-content {
      border: 1px solid #dde7ea;
      border-radius: 5px;
      padding: 20px;
      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); }
    .project-list .project .project-image {
      margin-bottom: 20px; }
      .project-list .project .project-image img {
        display: block;
        max-width: 100%;
        width: 100%;
        height: auto; }
    .project-list .project .project-title {
      font-size: 18px;
      font-size: 1.2em;
      font-weight: 300; }

figure {
  margin-bottom: 30px; }
  figure img {
    display: block;
    max-width: 100%;
    height: auto;
    border-radius: 5px; }

.project-info {
  list-style: none;
  margin-bottom: 30px; }
  .project-info li {
    padding: 10px 0;
    border-bottom: 1px solid #edf2f4; }
    .project-info li:last-child {
      border-bottom: none; }

.map {
  min-height: 300px;
  margin-bottom: 30px;
  border-radius: 5px;
  overflow: hidden; }

.boxed-content {
  border: 1px solid #dde7ea;
  padding: 20px;
  margin-bottom: 30px; }

.contact-form input:not([type="submit"]), .contact-form textarea {
  width: 100%; }
.contact-form textarea {
  min-height: 150px; }
.contact-form input[type="submit"] {
  background: -webkit-linear-gradient(#69c7b7, #69acc6);
  background: linear-gradient(#69c7b7, #69acc6);
  color: white; }
.contact-form .text-right {
  text-align: right; }

/*
 * Footer Styles
 */
.site-footer {
  padding-top: 50px; }

.widget {
  margin-bottom: 30px; }
  .widget .widget-title {
    font-size: 19px;
    font-size: 1.2666666667em;
    font-weight: 300;
    margin-bottom: 20px; }
  .widget address {
    margin: 20px 0; }

.social-links a {
  width: 40px;
  height: 32px;
  border-radius: 50%;
  border: 1px solid #cddbe1;
  text-align: center;
  color: #69acc7;
  display: inline-block;
  padding-top: 8px;
  -webkit-transition: .3s ease;
          transition: .3s ease; }
  .social-links a:hover {
    background: #69acc7;
    border-color: #69acc7;
    color: white; }

.arrow-list {
  list-style: none;
  list-style-image: url(images/arrow.png);
  margin-left: 20px;
  margin-bottom: 30px; }
  .arrow-list li {
    padding: 10px 0 10px 10px; }
    .arrow-list li a {
      color: #8e9ca5;
      -webkit-transition: .3s ease;
              transition: .3s ease; }
      .arrow-list li a:hover {
        color: #69acc7; }
  .arrow-list.has-border li {
    border-bottom: 1px solid #edf2f4; }
    .arrow-list.has-border li:last-child {
      border-bottom: none; }

